# yk-gpg

./: .gitignore  .gitleaks.toml  .pinact.yaml  CLAUDE.md  Cargo.toml  README.md  _typos.toml  cliff.toml  codecov.yml  deny.toml  hk.pkl  mise.toml
.cargo/: audit.toml
.claude/: settings.json
.claude/rules/: ci.md  documentation.md  src-cli.md  src-lib.md  tests.md
.claude/skills/: check.md  new-command.md  tdd.md
.config/: nextest.toml
.github/: zizmor.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
crates/kdub/: CHANGELOG.md  Cargo.toml  build.rs  zipsign-public.key
crates/kdub-lib/: Cargo.toml  tails-signing.key
crates/kdub-lib/src/: backup.rs  card.rs  card_provision.rs  card_reset.rs  card_setup.rs  config.rs  defaults.rs  doctor.rs  ephemeral.rs  error.rs  identity.rs  init.rs  keygen.rs  lib.rs  publish.rs  renew.rs  rotate.rs  stub.rs  tails.rs  tails_download.rs  tails_flash.rs  tails_persist.rs  types.rs  wkd.rs  ykman.rs
crates/kdub-lib/src/config/: dirmngr.conf  gpg.conf
crates/kdub-lib/src/snapshots/: kdub_lib__tails__tests__persistence_conf_snapshot.snap
crates/kdub-lib/tests/: tdd_anchors.rs
crates/kdub-lib/tests/fixtures/: test_key.asc
crates/kdub/src/: cli.rs  main.rs  secret_input.rs  updater.rs
crates/kdub/src/commands/: card.rs  completions.rs  doctor.rs  init.rs  key.rs  mod.rs  tails.rs  update.rs
crates/kdub/tests/: card_info.rs  card_provision.rs  card_reset.rs  card_safety.rs  card_setup.rs  card_touch.rs  cli.rs  fixture.rs  key_backup_restore.rs  key_create.rs  key_list.rs  key_publish.rs  key_renew.rs  key_rotate.rs  trycmd.rs  update.rs
crates/kdub/tests/cmd/: card_help.md  card_safety.md  update_help.md
crates/kdub/tests/fixtures/backups/0105FE2978E65225F20C80CB6463DE6279091425/: ownertrust.txt  public-key.asc  revocation-cert.asc
crates/kdub/tests/fixtures/identities/: 0105FE2978E65225F20C80CB6463DE6279091425.json  64D0979D8C9ECAAB6A2BF286BAD0E72D3F573C19.json  64D0979D8C9ECAAB6A2BF286BAD0E72D3F573C19.key
crates/kdub/tests/snapshots/: cli__help_snapshot.snap  key_list__key_list_snapshot.snap
docs/: tails-reference.md
