[workspace]
members = ["crates/kdub", "crates/kdub-lib"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.94"
license = "MIT"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
secrecy = "0.10"
hex = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
pgp = "0.19"
rand = "0.8"
toml = "1"
directories = "6"
tempfile = "3"
rstest = "0.26"
ureq = { version = "3", features = ["socks-proxy"] }
urlencoding = "2"
sha1 = "0.10"
sha2 = "0.10"
indicatif = "0.18"
memmap2 = "0.9"
plist = "1"
zipsign-api = { version = "0.1", default-features = false, features = [
  "verify-tar",
] }
flate2 = "1"
tar = "0.4"
openpgp-card = "0.6"
openpgp-card-rpgp = "0.7"
card-backend-pcsc = "0.5"

# cargo-release configuration
[workspace.metadata.release]
shared-version = true # all crates share one version
tag-name = "v{{version}}" # tags like v0.1.0
pre-release-commit-message = "release: v{{version}}"
tag-message = "v{{version}}"
pre-release-hook = [
  "bash",
  "-c",
  "git cliff --output CHANGELOG.md --tag v{{version}} && git add CHANGELOG.md",
]
publish = false # don't publish to crates.io (internal lib)
push = true
push-remote = "origin"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
lto = true
strip = true
codegen-units = 1
